--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@dnd-kit/core": "^6.0.5",
     "@dnd-kit/modifiers": "^6.0.0",
     "@dnd-kit/sortable": "^7.0.1",
+    "@dnd-kit/utilities": "^3.2.0",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@hookform/error-message": "^2.0.0",
@@ -79,15 +80,10 @@
     "react-hook-form": "^7.30.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.9",
-    "@emotion/babel-plugin": "^11.9.2",
-    "@emotion/babel-preset-css-prop": "^11.2.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@typescript-eslint/eslint-plugin": "^5.28.0",
     "@typescript-eslint/parser": "^5.29.0",
-    "autoprefixer": "^10.4.4",
-    "babel-loader": "^8.2.5",
     "cross-env": "^7.0.3",
     "eslint": "^8.13.0",
     "eslint-config-next": "12.1.5",
@@ -95,14 +91,10 @@
     "eslint-plugin-chakra-ui": "^0.6.4",
     "husky": "^7.0.4",
     "jest": "^28.1.1",
-    "jest-environment-jsdom": "^28.1.1",
-    "postcss": "^8.4.12",
     "prettier": "2.6.2",
     "prisma": "^4.0.0",
     "sass": "^1.50.1",
-    "tailwindcss": "^3.0.24",
-    "typescript": "^4.7.4",
-    "webpack": "^5.72.0"
+    "typescript": "^4.7.4"
   },
   "resolutions": {
     "webpack": "^5"
