--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,22 +3,7 @@
   // Extension identifier format: ${publisher}.${name}. Example: vscode.csharp
 
   // List of extensions which should be recommended for users of this workspace.
-  "recommendations": [
-    "esbenp.prettier-vscode",
-    "alduncanson.react-hooks-snippets",
-    "dbankier.vscode-quick-select",
-    "willstakayama.vscode-nextjs-snippets",
-    "drywolf.dark-plus-plus-theme",
-    "vunguyentuan.vscode-postcss",
-    "clinyong.vscode-css-modules",
-    "stylelint.vscode-stylelint",
-    "bradgashler.htmltagwrap",
-    "naumovs.color-highlight",
-    "github.vscode-pull-request-github",
-    "mattpocock.ts-error-translator",
-    "prisma.prisma",
-    "Gruntfuggly.todo-tree"
-  ],
+  "recommendations": [],
   // List of extensions recommended by VS Code that should not be recommended for users of this workspace.
   "unwantedRecommendations": []
 }
