--- a/package.json
+++ b/package.json
@@ -70,16 +70,16 @@
     "deep-equal": "^2.0.5",
     "framer-motion": "^6.3.3",
     "immer": "^9.0.15",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.3.4",
     "nanoid": "^4.0.0",
-    "next": "^12.2.2",
+    "next": "^13.1.5",
     "next-auth": "^4.10.3",
     "nextjs-progressbar": "^0.0.14",
     "nodemailer": "^6.7.7",
     "probe-image-size": "^7.2.3",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.30.0",
     "styled-components": "^5.3.5"
   },
@@ -90,7 +90,7 @@
     "@typescript-eslint/parser": "^5.29.0",
     "cross-env": "^7.0.3",
     "eslint": "^8.13.0",
-    "eslint-config-next": "12.1.5",
+    "eslint-config-next": "^13.1.5",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-chakra-ui": "^0.6.4",
     "husky": "^7.0.4",
